# nf4-triton-kernel

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  benchmark.py  colab_notebook.py  nf4_kernel_module.py  pyproject.toml  requirements.txt  unsloth_challenge_research.md
.github/workflows/: ci.yml
assets/: benchmark_data.json
benchmarks/: benchmark.py  generate_graphs.py
src/nf4_kernel/: __init__.py  kernel.py
tests/: test_nf4_kernel.py
