[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf4-triton-kernel"
version = "1.0.0"
description = "Optimized NF4 (NormalFloat 4-bit) dequantization kernel written in Triton — faster than bitsandbytes C++"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["nf4", "triton", "quantization", "dequantization", "llm", "pytorch", "gpu", "kernel", "bitsandbytes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
urls = {Homepage = "https://github.com/Griffith-7/nf4-triton-kernel", Source = "https://github.com/Griffith-7/nf4-triton-kernel"}
dependencies = [
    "torch>=2.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-timeout>=2.0.0"]
bench = ["bitsandbytes>=0.43.0"]
dev-all = ["pytest>=7.0.0", "pytest-timeout>=2.0.0", "ruff>=0.1.0", "bitsandbytes>=0.43.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["nf4_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "N803", "N806", "N812"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N", "I", "E402", "F541", "E701", "E702"]
